Fix Viagem structure
